--- a/src/app/add-item/add-item.component.scss
+++ b/src/app/add-item/add-item.component.scss
@@ -1,14 +1,30 @@
-.example-spacer {
-    flex: 1 1 auto;
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
   }
-  .table-body{
-    padding-top: 10px;
-    margin:0 auto;
-    max-width: 1250px;
+  
+  .example-full-width {
+    width: 100%;
+  }
+  .content{
+    padding-top: 20px;
+  }
+  .row{
+    display: flex;
+    gap: 10px;
+
     mat-form-field{
       width: 100%;
     }
   }
+  .action{
+    padding: 0px 20px 25px;
+    button{
+      flex: 1;
+    }
+  }
+
   ::ng-deep.mat-mdc-snack-bar-container {
     &.custom-style {
       --mdc-snackbar-container-color:#2E8B57;
